# lootdrop

./: .gitignore  GUIDE.md  LICENSE  README.md
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lootdrop/: MainActivity.kt  NfcVerifier.kt  QrVerifier.kt
backend/: main.py  requirements.txt
programs/lootdrop/: Anchor.toml  Cargo.toml
programs/lootdrop/src/: lib.rs
sdk/: README.md
sdk/src/: lib.rs
web/: .gitignore  package-lock.json  package.json  svelte.config.js  twa-manifest.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: config.ts
web/src/lib/components/: BottomNav.svelte  DropCard.svelte  PullToRefresh.svelte  SplashScreen.svelte  WalletButton.svelte
web/src/lib/data/: mock.ts
web/src/lib/stores/: app.svelte.ts
web/src/lib/types/: index.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/profile/: +page.svelte
web/src/routes/rewards/: +page.svelte
web/src/routes/scan/: +page.svelte
web/static/: manifest.json  sw.js
web/static/.well-known/: assetlinks.json
